-products with Media -Started using lombok